Fix issues with no javascript support and less flickering when there is javascript support
git-svn-id: https://plugins.svn.wordpress.org/tabify-edit-screen/trunk@528126 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -1,4 +1,4 @@
-.tabifybox-hide { display: none; }
+.js .tabifybox-hide { display: none; }
 
 .tabify_control {
 	display: inline-block;
